MAJ Tri + taille logo

--- a/docs/extra.css
+++ b/docs/extra.css
@@ -1,9 +1,10 @@
 h1{color : red;}
 .md-header{
 	background-image : url("assets/logo.png");
+	background-size : auto 50px;
 	background-repeat : no-repeat;
 	background-position : center;
-	min-height : 100px;
+	min-height : 50px;
 	}
 	
 .md-search_form{
