--- a/site/NSI/Premiere/C02/Roue_Binaire.css
+++ b/site/NSI/Premiere/C02/Roue_Binaire.css
@@ -19,8 +19,9 @@
   border-color : lightgray;
   color : lightgreen;
   font-size : 50px;
-  width : 70px;
-  min-width : 70px;
+  width : 50px;
+  min-width : 50px;
+  display: inline-block;
   text-align:center;
 }
 .roll{
