--- a/docs/extra.css
+++ b/docs/extra.css
@@ -15,3 +15,13 @@ h1{color : red;}
 	background-color : white;
 	margin : auto;
 }
+
+.md-typeset .admonition{
+    font-size: 0.9em;
+}
+
+.md-typeset h1 {
+    text-align: center;
+    border-width: 2px;
+	border-style: solid;
+}
