--- a/site/extra.css
+++ b/site/extra.css
@@ -1,4 +1,3 @@
-h1{color : red;}
 .md-header{
 	background-image : url("assets/logo.png");
 	background-size : auto 50px;
@@ -7,11 +6,42 @@ h1{color : red;}
 	min-height : 50px;
 	}
 	
-.md-search_form{
-	
-}
+
 
 .imagepng{
 	background-color : white;
 	margin : auto;
+}
+
+.md-typeset .admonition{
+    font-size: 0.9em;
+}
+
+.md-typeset h1 {
+    text-align: center;
+    border-width: 2px;
+	border-style: solid;
+	
+}
+
+body {
+        counter-reset: compteurh2;	
+		
+    }
+h1{
+	counter-reset:compteurh2;
+	}
+
+h2{
+	counter-reset:compteurh3;
+	}
+
+h2::before {
+	content: counter(compteurh2) ".\0000a0\0000a0";
+	counter-increment: compteurh2;
+}
+
+h3:before {
+	content: counter(compteurh2) "." counter(compteurh3) ".\0000a0\0000a0";
+	counter-increment: compteurh3;
 }
