MAJ marges + entete

--- a/docs/extra.css
+++ b/docs/extra.css
@@ -1,3 +1,8 @@
+@page {
+  margin: 1cm;
+}
+
+
 .md-header{
 	background-image : url("assets/logo.png");
 	background-size : auto 50px;
@@ -14,7 +19,7 @@
 }
 
 .md-typeset .admonition{
-    font-size: 0.9em;
+    font-size: 1em;
 }
 
 .md-typeset h1 {
