--- a/docs/extra.css
+++ b/docs/extra.css
@@ -50,3 +50,22 @@ h3:before {
 	content: counter(compteurh2) "." counter(compteurh3) ".\0000a0\0000a0";
 	counter-increment: compteurh3;
 }
+
+
+.container{
+	display : flex;
+}
+
+.column2{
+	display : block;
+	width : 50%;
+	
+}
+
+.column2 img {
+	margin : auto;
+}
+
+.column2 h6 {
+	text-align : center;
+}
