--- a/site/extra.css
+++ b/site/extra.css
@@ -69,3 +69,9 @@ h3:before {
 .column2 h6 {
 	text-align : center;
 }
+
+mjx-mtd{
+	border-style : solid;
+	border-left-width: 1px;
+	border-right-width: 1px;
+}
