--- a/site/NSI/Premiere/Projets/NasaWeb/rover.css
+++ b/site/NSI/Premiere/Projets/NasaWeb/rover.css
@@ -3,7 +3,15 @@ body{
     color: antiquewhite;
 }
 
-#curiosity{
+img{
+	display : block;
+}
+
+#Contenu{
+	display : none;
+ }
+
+#photo{
     
 	max-height : 400px;
 	min-height : 400px;
@@ -19,7 +27,7 @@ body{
 #form_container{
     display: flex;
 	flex-direction : row ;
-	width : 400px ;
+	width : 600px ;
 	margin : auto;
    
 }
@@ -33,3 +41,43 @@ body{
 	min-width : 100px;
 	flex: 2 2 auto;
 }
+
+
+
+.lds-ring {
+	display: block;
+	position: relative;
+	width: 80px;
+	height: 80px;
+	margin : auto;
+  }
+  .lds-ring div {
+	box-sizing: border-box;
+	display: block;
+	position: absolute;
+	width: 64px;
+	height: 64px;
+	margin: 8px;
+	border: 8px solid #fff;
+	border-radius: 50%;
+	animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+	border-color: #fff transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+	animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+	animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+	animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+	0% {
+	  transform: rotate(0deg);
+	}
+	100% {
+	  transform: rotate(360deg);
+	}
+  }
+  
