--- a/site/NSI/Terminale/C04/Blog/templates/index.html
+++ b/site/NSI/Terminale/C04/Blog/templates/index.html
@@ -5,7 +5,7 @@
 {% if session['pseudo'] %}
 <form action="{{ url_for('add_post') }}" method="post">
     <label for="message">Votre message :</label><br>
-    <input type="text" id="message" name="message" ><br><br>    
+    <input type="text" id="message" name="message" required><br><br>    
     <input type="submit" value="envoyer">
 </form>
 {% endif %}
